--- a/templates/infoBox.html
+++ b/templates/infoBox.html
@@ -3,8 +3,13 @@
         <span class="material-icons info-icon">info</span>
         <div class="info-content">
           <p>
-            You can't edit every field. The <strong>issue key</strong> stays the same so that you always have a unique way of identifying each issue. The <strong>Created</strong> and <strong>Updated</strong> fields generate automatically based on when you created the issue or last updated it, so you can't edit them.
+            Las estructuras de datos son formas organizadas de almacenar, gestionar y manipular datos para que puedan ser utilizados de manera eficiente en un programa o sistema. Estas estructuras son fundamentales en la informática y programación, ya que determinan cómo se organizan los datos en memoria y cómo se pueden acceder, procesar y modificar.
           </p>
+          <ul>
+            <li><b>Eficiencia</b>: Permiten manejar grandes cantidades de datos de manera óptima.</li>
+            <li><b>Organización</b>: Ayudan a estructurar el código y los algoritmos para que sean más comprensibles y modulares.</li>
+            <li><b>Optimización</b>: Mejora la velocidad de ejecución y el uso de la memoria en las aplicaciones.</li>
+          </ul>
         </div>
     </div>
 </section>
