--- a/templates/textoMasVideo.html
+++ b/templates/textoMasVideo.html
@@ -11,9 +11,9 @@
                 <ul>
                     <li>Arrays/Arreglos</li>
                     <li>List/Listas Enlazadas</li>
-                    <li>HashMaps/HashTables</li>
-                    <li>Stacks</li>
-                    <li>Queues/Filas/Colas</li>
+                    <li>HashMaps/HashTables/Tablas hash</li>
+                    <li>Stacks/Filas</li>
+                    <li>Queues/Colas</li>
                     <li>BinarySearchTree (BST)</li>
                 </ul>
             </p>
