--- a/templates/toggleInfo.html
+++ b/templates/toggleInfo.html
@@ -2,13 +2,11 @@
     <div class="container">
     <div class="section">
         <div class="section-header" onclick="toggleSection(this)">
-            <h3>Epic</h3>
+            <h3>Tipos de datos simples.</h3>
             <span class="icon">+</span>
         </div>
         <div class="section-content">
-            <p>An <strong>epic</strong> represents a large body of work that can break down into smaller chunks.</p>
-            <p>👉 <strong>For example:</strong> You might create an epic for a redesign of a homepage, or writing and publishing a series of blog posts.</p>
-            <p>Known as "parent" issues, epics contain smaller issues within them. You and your team can decide what's a large body of work and what isn’t.</p>
+            <p>La principal característica de los tipos de datos simples consiste es que ocupan sólo una casilla de memoria; por lo tanto, una variable simple hace referencia a un único valor a la vez. En este grupo de datos se encuentran: números enteros y reales, caracteres, booleanos, enumerados y subrangos. Cabe señalar que los dos últimos no existen en algunos lenguajes de programación.</p>
         </div>
     </div>
 
