--- a/static/styles.css
+++ b/static/styles.css
@@ -476,7 +476,7 @@ iframe {
     font-family: Arial, sans-serif;
     display: flex;
     background-color: #f4f4f4;
-    width: 50rem;
+    width: 80%;
 }
 
 .tabs-container {
@@ -487,8 +487,8 @@ iframe {
     display: flex;
     background-color: #ffffff;
     border-bottom: 2px solid #ddd;
-    width: 100%;
-    max-width: 50rem;
+    width: 80%;
+    max-width: 80%;
     z-index: 10;
 }
 
@@ -519,6 +519,8 @@ iframe {
 
 .content {
     display: none;
+    width: 80%;
+    justify-content: left;
     animation: fadeIn 0.3s ease-in-out;
 }
 
@@ -555,7 +557,7 @@ p {
     width: 100px;
     height: 100px;
     background-color: #007BFF;
-    color: white;
+    color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     position: relative;
@@ -588,7 +590,7 @@ p {
 }
 
 .array-item.selected {
-    background-color: lightcoral;
+    background-color: coral;
 }
 
 button {
@@ -654,4 +656,12 @@ input[type="text"] {
   
   .info-content strong {
     font-weight: bold;
+  }
+
+  div .link{
+    padding: 10px 20px; 
+    background-color: #007BFF; 
+    color: white; 
+    text-decoration: none; 
+    border-radius: 5px;
   }
